WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84824
SVG inline style of 'marker-*' does not override
https://bugs.webkit.org/show_bug.cgi?id=84824
Summary
SVG inline style of 'marker-*' does not override
Dirk Schulze
Reported
2012-04-24 21:03:46 PDT
Created
attachment 138732
[details]
Marker with inline style Inline style should override all other styles. This is not the case for all 'marker' properties. You shouldn't see any red on the attached file.
Attachments
Marker with inline style
(585 bytes, image/svg+xml)
2012-04-24 21:03 PDT
,
Dirk Schulze
no flags
Details
Patch
(10.93 KB, patch)
2012-04-26 16:04 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(10.72 KB, patch)
2012-04-26 16:22 PDT
,
Rob Buis
zimmermann
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2012-04-26 16:04:49 PDT
Created
attachment 139089
[details]
Patch
Rob Buis
Comment 2
2012-04-26 16:22:37 PDT
Created
attachment 139092
[details]
Patch
Nikolas Zimmermann
Comment 3
2012-04-27 02:00:00 PDT
Comment on
attachment 139092
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=139092&action=review
Looks great, r=me. Please fix following before landing:
> LayoutTests/svg/custom/inline-style-overrides-markers.svg:20 > + <line x1="100" y1="100" x2="100" y2="100" style="marker-start: none;marker-mid: none;marker-end: none;" />
I'd propose to draw the (stroked) line, even though no markers are visible. And empty expected.svg looks weird :-)
Rob Buis
Comment 4
2012-04-27 08:41:52 PDT
Landed in
r115432
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug