SVG inline style of 'marker-*' does not override https://bugs.webkit.org/show_bug.cgi?id=84824

Source/WebCore:

Reviewed by Nikolas Zimmermann.

Properly handle CSSValueNone for clip-path, filter, mask and marker-* properties. Instead
of bailing out, set the none value explicitly, since an earlier match may have set it to
something other than none.

Tests: svg/custom/inline-style-overrides-clipPath-expected.svg
       svg/custom/inline-style-overrides-clipPath.svg
       svg/custom/inline-style-overrides-filter-expected.svg
       svg/custom/inline-style-overrides-filter.svg
       svg/custom/inline-style-overrides-markers-expected.svg
       svg/custom/inline-style-overrides-markers.svg
       svg/custom/inline-style-overrides-mask-expected.svg
       svg/custom/inline-style-overrides-mask.svg

* css/SVGCSSStyleSelector.cpp:
(WebCore::StyleResolver::applySVGProperty):

LayoutTests:

Add tests for clip-path, filter, mask and marker-* properties.

Reviewed by Nikolas Zimmermann.

* svg/custom/inline-style-overrides-clipPath-expected.svg: Added.
* svg/custom/inline-style-overrides-clipPath.svg: Added.
* svg/custom/inline-style-overrides-filter-expected.svg: Added.
* svg/custom/inline-style-overrides-filter.svg: Added.
* svg/custom/inline-style-overrides-markers-expected.svg: Added.
* svg/custom/inline-style-overrides-markers.svg: Added.
* svg/custom/inline-style-overrides-mask-expected.svg: Added.
* svg/custom/inline-style-overrides-mask.svg: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@115432 bbb929c8-8fbe-4397-9dbb-9b2b20218538