third_party/WebKit/Source/WebCore/css/SVGCSSStyleSelector.cpp
@@ -358,8 +358,6 @@ void StyleResolver::applySVGProperty(CSSPropertyID id, CSSValue* value)
             int type = primitiveValue->primitiveType();
             if (type == CSSPrimitiveValue::CSS_URI)
                 s = primitiveValue->getStringValue();
-            else
-                return;
 
             svgstyle->setMarkerStartResource(SVGURIReference::fragmentIdentifierFromIRIString(s, m_element->document()));
             break;
@@ -374,8 +372,6 @@ void StyleResolver::applySVGProperty(CSSPropertyID id, CSSValue* value)
             int type = primitiveValue->primitiveType();
             if (type == CSSPrimitiveValue::CSS_URI)
                 s = primitiveValue->getStringValue();
-            else
-                return;
 
             svgstyle->setMarkerMidResource(SVGURIReference::fragmentIdentifierFromIRIString(s, m_element->document()));
             break;
@@ -390,8 +386,6 @@ void StyleResolver::applySVGProperty(CSSPropertyID id, CSSValue* value)
             int type = primitiveValue->primitiveType();
             if (type == CSSPrimitiveValue::CSS_URI)
                 s = primitiveValue->getStringValue();
-            else
-                return;
 
             svgstyle->setMarkerEndResource(SVGURIReference::fragmentIdentifierFromIRIString(s, m_element->document()));
             break;
@@ -429,8 +423,6 @@ void StyleResolver::applySVGProperty(CSSPropertyID id, CSSValue* value)
             int type = primitiveValue->primitiveType();
             if (type == CSSPrimitiveValue::CSS_URI)
                 s = primitiveValue->getStringValue();
-            else
-                return;
 
             svgstyle->setFilterResource(SVGURIReference::fragmentIdentifierFromIRIString(s, m_element->document()));
             break;
@@ -445,8 +437,6 @@ void StyleResolver::applySVGProperty(CSSPropertyID id, CSSValue* value)
             int type = primitiveValue->primitiveType();
             if (type == CSSPrimitiveValue::CSS_URI)
                 s = primitiveValue->getStringValue();
-            else
-                return;
 
             svgstyle->setMaskerResource(SVGURIReference::fragmentIdentifierFromIRIString(s, m_element->document()));
             break;
@@ -461,8 +451,6 @@ void StyleResolver::applySVGProperty(CSSPropertyID id, CSSValue* value)
             int type = primitiveValue->primitiveType();
             if (type == CSSPrimitiveValue::CSS_URI)
                 s = primitiveValue->getStringValue();
-            else
-                return;
 
             svgstyle->setClipperResource(SVGURIReference::fragmentIdentifierFromIRIString(s, m_element->document()));
             break;
